@@ -2,7 +2,7 @@ plugins {
     id "de.undercouch.download" version "3.4.3"
 }
 
-ant.echo('Java version: ' + JavaVersion.current()); 
+ant.echo('Java version: ' + JavaVersion.current());
 
 def dirBuildFile =  "./build/main"
 def dirBuildNative = "./build/main/native"
@@ -11,13 +11,18 @@ def dirWorkspace = "./"
 def dirPack = "./pack"
 def dirLibFile = "lib"
 def dirModFile ="./mod"
-def javaHome = "$System.env.JAVA_HOME"
+def javaHome = System.getProperty('java.home')
+
 def vmVersion = "0.3.1"
 def dirRuntimeJars = 'jars' // we'll store mod and lib stuff in here
 
 allprojects { 
+
     apply plugin: 'java'
     apply plugin: 'idea'
+
+    targetCompatibility = 10
+    sourceCompatibility = 10
 
     repositories {
         jcenter()
@@ -36,7 +41,8 @@ task compileNative(type:Exec) {
     dependsOn 'modCrypto:compileNative'
     dependsOn 'modAionImpl:compileJava'
 
-    doFirst { 
+
+    doFirst {
         mkdir "${dirBuildFile}"
         mkdir "${dirNative}/linux/equihash"
         mkdir "${dirBuildNative}/linux/equihash"
@@ -47,6 +53,8 @@ task compileNative(type:Exec) {
             fileset(dir: "./modAionImpl/build/native")
         }
     }
+
+
     commandLine "g++", 
         "-fPIC", 
         "-shared", 
@@ -111,9 +119,24 @@ subprojects {
         delete 'native'
     }
 
-    afterEvaluate { 
+    afterEvaluate {
+
+ant.echo('moduleName: ' + moduleName);
+
+        if (moduleName.equals("aion.gui")) { 
         // Override java plug-in behaviour to make JDK9+ module logic work
         // From: https://guides.gradle.org/building-java-9-modules/#step_2_produce_java_9_modules_for_all_subprojects
+        compileJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'javafx.controls'
+                ]
+                classpath = files()
+            }
+        }
+        } else {
         compileJava {
             inputs.property("moduleName", moduleName)
             doFirst {
@@ -122,6 +145,7 @@ subprojects {
                 ]
                 classpath = files()
             }
+        }
         }
 
 /*
@@ -220,14 +244,15 @@ build {
     dependsOn("collectDependentJars")
 }
 
-task prePack(type:Exec)  { 
+task prePack(type:Exec)  {
+    dependsOn ':aion_api:cleanPack' 
     dependsOn ':aion_api:build'
     commandLine 'sh', 'script/prepack.sh' 
 }
 task postPack(type:Exec) { commandLine 'sh', 'script/postpack.sh' }
 
 /** Replaces `ant pack_build` */
-task pack(type: Tar) { 
+task pack(type: Tar) {
     dependsOn build
     dependsOn prePack
     dependsOn collectDependentJars 
@@ -287,13 +312,14 @@ task packDevDocker(type: Exec) {
 
 clean { 
     dependsOn "ant-3rd_clean"
+    dependsOn ':aion_api:clean' 
     delete dirPack
     delete file('report')
 }
 
 
 /** Replaces `ant ci_build` */
-task ciBuild { 
+task ciBuild {
     dependsOn build
     def ciModules = ['modAionBase', 
         'modCrypto', 
@@ -314,7 +340,7 @@ task ciBuild {
 
 idea { 
     project {
-        jdkName = '10.0'
+        jdkName = '11.0'
     }
 }
 
